force-app/main/default/objects/Loan_Documents__c/Loan_Documents__c.object-meta.xml
<CustomObject>
    <label>Loan Document</label>
    <nameField>
        <displayFormat>LD-{000000000}</displayFormat>
        <label>Loan Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Document</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>