force-app/main/default/objects/Loan_Documents__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>