force-app/main/default/objects/Loan_Documents__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Report</fullName>
            </value>
            <value>
                <fullName>Customer Consent From</fullName>
            </value>
            <value>
                <fullName>Loan Application</fullName>
            </value>
            <value>
                <fullName>Suspension Memo</fullName>
            </value>
            <value>
                <fullName>Security Documentation</fullName>
            </value>
            <value>
                <fullName>Customer Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>