force-app/main/default/objects/Loan_Documents__c/fields/Verified_On__c.field-meta.xml
<CustomField>
    <fullName>Verified_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verified On</label>
    <type>DateTime</type>
</CustomField>